--- a/Лабораторная_работа_№1.ipynb
+++ b/Лабораторная_работа_№1.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/L0ns3n1te/py_LABbl/blob/main/%D0%9B%D0%B0%D0%B1%D0%BE%D1%80%D0%B0%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0_%E2%84%961.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/L0ns3n1te/py_LABbl/blob/module3-lab1-1/%D0%9B%D0%B0%D0%B1%D0%BE%D1%80%D0%B0%D1%82%D0%BE%D1%80%D0%BD%D0%B0%D1%8F_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0_%E2%84%961.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -108,10 +108,23 @@
         "print(np.array2string(vector, separator=', '))"
       ],
       "metadata": {
-        "id": "u8xiypn6-him"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u8xiypn6-him",
+        "outputId": "dff8c10a-ea60-44cf-a0ee-08e4b96267ad"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.05808361, 0.15599452, 0.15601864, 0.37454012, 0.59865848, 0.60111501,\n",
+            " 0.70807258, 0.73199394, 0.86617615, 0.95071431]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -122,10 +135,22 @@
         "print(True in np.all(fourth_array == 4, axis=1))"
       ],
       "metadata": {
-        "id": "Bd4xOQUU-hqS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bd4xOQUU-hqS",
+        "outputId": "86485def-e300-466f-f35c-48be2f433380"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -135,10 +160,22 @@
         "print(array5)"
       ],
       "metadata": {
-        "id": "ku16Ixsj-hy6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ku16Ixsj-hy6",
+        "outputId": "568a83d4-7e65-44b0-e42f-cfafe57dd8f1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0. 0. 0. 0. 0. 1.]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -150,10 +187,22 @@
         "print(index)"
       ],
       "metadata": {
-        "id": "XRCRdFQs-iNF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XRCRdFQs-iNF",
+        "outputId": "73d946c1-9a3b-4e37-9465-48d94d521823"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 1, 1)\n"
+          ]
+        }
+      ]
     }
   ]
 }
